# CxxFramework

./: .editorconfig  .gitignore  CFConfigure.cpp  CFEnv.cpp  CFMain.cpp  CMakeLists.txt  Platform.h.0  Platform.h.in  demo.cpp  main.cpp
CFBasic/: CMakeLists.txt  ConfParser.cpp  GetWord.c  Trim.c  base64.c  md5.c  md5digest.cpp
CFBasic/include/: ConfParser.h  GetWord.h  Trim.h
CFBasic/include/CF/: ConfParser.h  GetWord.h  base64.h  md5.h  md5digest.h
CFCore/: BufferPool.cpp  CMakeLists.txt  CodeFragment.cpp  ConcurrentQueue.cpp  Cond.cpp  DateTranslator.cpp  FileSource.cpp  Heap.cpp  InternalStdLib.cpp  Mutex.cpp  MyAssert.cpp  OS.cpp  OSBufferPool.cpp  OSCodeFragment.cpp  OSCond.cpp  OSFileSource.cpp  OSHeap.cpp  OSMutex.cpp  OSMutexRW.cpp  OSQueue.cpp  OSRef.cpp  OSRefTableEx.cpp  OSThread.cpp  OSTime.cpp  Queue.cpp  RWMutex.cpp  Ref.cpp  ResizeableStringFormatter.cpp  StrPtrLen.cpp  StringFormatter.cpp  StringParser.cpp  StringTranslator.cpp  Thread.cpp  Time.cpp  Utils.cpp  mycondition.cpp  mymutex.cpp
CFCore/include/: DateTranslator.h  MyAssert.h  OS.h  OSCond.h  OSHashTable.h  OSHeap.h  OSMutex.h  OSMutexRW.h  OSQueue.h  OSRef.h  OSThread.h  OSTime.h  SafeStdLib.h  StrPtrLen.h  StringFormatter.h  StringParser.h
CFCore/include/CF/: ArrayObjectDeleter.h  BufferPool.h  CodeFragment.h  ConcurrentQueue.h  Core.h  DateTranslator.h  FileSource.h  HashTable.h  Heap.h  MyAssert.h  PLDoubleLinkedList.h  Queue.h  Ref.h  ResizeableStringFormatter.h  StrPtrLen.h  StringFormatter.h  StringParser.h  StringTranslator.h  Utils.h  sstdlib.h
CFCore/include/CF/Core/: Cond.h  DateTranslator.h  Mutex.h  OSArrayObjectDeleter.h  OSBufferPool.h  OSCodeFragment.h  OSFileSource.h  RWMutex.h  SpinLock.h  Thread.h  Time.h  Utils.h  mycondition.h  mymutex.h
CFHttp/: CMakeLists.txt  HTTPClientRequestStream.cpp  HTTPClientResponseStream.cpp  HTTPDispatcher.cpp  HTTPListenerSocket.cpp  HTTPPacket.cpp  HTTPProtocol.cpp  HTTPRequestStream.cpp  HTTPResponseStream.cpp  HTTPSession.cpp  HTTPSessionInterface.cpp  QueryParamList.cpp  UserAgentParser.cpp
CFHttp/include/: HTTPClientRequestStream.h  HTTPClientResponseStream.h  HTTPDef.h  HTTPDispatcher.h  HTTPListenerSocket.h  HTTPPacket.h  HTTPProtocol.h  HTTPRequestStream.h  HTTPSession.h  HTTPSessionInterface.h  PLDoubleLinkedList.h  QueryParamList.h  UserAgentParser.h
CFHttp/include/CF/Net/Http/: HTTPClientRequestStream.h  HTTPClientResponseStream.h  HTTPConfigure.hpp  HTTPDef.h  HTTPDispatcher.h  HTTPListenerSocket.h  HTTPPacket.h  HTTPProtocol.h  HTTPRequestStream.h  HTTPResponseStream.h  HTTPSession.h  HTTPSessionInterface.h  QueryParamList.h  UserAgentParser.h
CFSocket/: CMakeLists.txt  ClientSocket.cpp  EventContext.cpp  Socket.cpp  SocketUtils.cpp  TCPListenerSocket.cpp  TCPSocket.cpp  UDPDemuxer.cpp  UDPSocket.cpp  UDPSocketPool.cpp  epollev.cpp  ev.cpp  win32ev.cpp
CFSocket/include/: ClientSocket.h  EventContext.h  Socket.h  SocketUtils.h  TCPListenerSocket.h  TCPSocket.h  UDPSocket.h  UDPSocketPool.h  epollev.h  ev.h
CFSocket/include/CF/Net/: ev.h
CFSocket/include/CF/Net/Socket/: ClientSocket.h  EventContext.h  Socket.h  SocketUtils.h  TCPListenerSocket.h  TCPSocket.h  UDPDemuxer.h  UDPSocket.h  UDPSocketPool.h
CFThread/: CMakeLists.txt  IdleTask.cpp  Task.cpp  TimeoutTask.cpp
CFThread/include/: IdleTask.h  Task.h  TimeoutTask.h
CFThread/include/CF/: Thread.h
CFThread/include/CF/Thread/: IdleTask.h  Task.h  TimeoutTask.h
CommonUtilitiesLib/: CMakeLists.txt  EventContext.cpp  Format.cpp  IdleTask.cpp  MakeDir.c  OS.cpp  OSBufferPool.cpp  OSFileSource.cpp  OSRef.cpp  Socket.cpp  StrPtrLen.cpp  StringFormatter.cpp  TCPListenerSocket.cpp  TCPSocket.cpp  Task.cpp  TimeoutTask.cpp  UserAgentParser.cpp  epollEvent.cpp  getopt.c
CommonUtilitiesLib/include/: EventContext.h  Format.h  IdleTask.h  MakeDir.h  MyAssert.h  OS.h  OSHeaders.h  OSThread.h  PathDelimiter.h  ResizeableStringFormatter.h  Socket.h  SocketUtils.h  StrPtrLen.h  StringFormatter.h  TCPListenerSocket.h  TCPSocket.h  Task.h  TimeoutTask.h  common.h  getopt.h
HTTPUtilitiesLib/: CMakeLists.txt  HTTPClientRequestStream.cpp  HTTPClientResponseStream.cpp  HTTPPacket.cpp  HTTPProtocol.cpp  HTTPRequest.cpp  HTTPRequestStream.cpp  HTTPResponseStream.cpp  HTTPSession.cpp  HTTPSessionInterface.cpp
HTTPUtilitiesLib/include/: HTTPClientRequestStream.h  HTTPClientResponseStream.h  HTTPListenerSocket.h  HTTPPacket.h  HTTPRequest.h  HTTPRequestStream.h  HTTPResponseStream.h  HTTPSession.h  HTTPSessionInterface.h
Include/: CF.h  CFConfigure.h  CFDef.h  CFEnv.h  CFMemoryDeleter.h  CFState.h  OSHeaders.h  PlatformHeader.h  QTSS.h  Win32header.h  revision.h
Include/CF/: CF.h  CFConfigure.h  CFConfigure.hpp  CFDef.h  CFEnv.h  CFState.h  Platform.h  Revision.h  Types.h  Win32header.h
cmake/: DetectTarget.cmake
